Edited figure saving

--- a/2019111010/elmo.ipynb
+++ b/2019111010/elmo.ipynb
@@ -1035,7 +1035,7 @@
    ],
    "source": [
     "ax = sns.heatmap(df.pivot(\"w1\", \"w2\", \"cos_sim\"), cmap=\"YlGnBu\", annot=True, fmt=\"f\")\n",
-    "#plt.savefig(\"./figs/cos_sim2.png\")\n",
+    "plt.savefig(\"./figs/cos_sim.png\")\n",
     "plt.show()"
    ]
   },
@@ -1060,7 +1060,7 @@
    ],
    "source": [
     "ax = sns.heatmap(df.pivot(\"w1\", \"w2\", \"euc\"), annot=True, fmt=\"f\")\n",
-    "#plt.savefig(\"./figs/euc_dist2.png\")\n",
+    "plt.savefig(\"./figs/euc_dist.png\")\n",
     "plt.show()"
    ]
   },
